adicionado mascara de cep, e estilização melhorada

--- a/resultado.html
+++ b/resultado.html
@@ -14,7 +14,7 @@
     <header id="cabeca">
         <div class="containerHeader">
             <div class="flex">
-                <a href="index.html"><i class="fa-solid fa-map"></i></a>
+                <a href="index.html"><i class="fa-solid fa-map" id="mapinhaHomeResult"></i></a>
                 <nav>
                     <ul>
                         <li><a href="#comeco">HOME</a></li>
